--- a/src/hero-section/Hero.module.css
+++ b/src/hero-section/Hero.module.css
@@ -3,7 +3,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  background-image: url("image/hero-img.png");
+  background-image: url("public/image/hero-img.png");
   background-size: cover;
   background-position: center;
 
