--- a/src/navbar/Navbar.module.css
+++ b/src/navbar/Navbar.module.css
@@ -31,3 +31,8 @@ body{
     color: white;
     font-family:Arial, Helvetica, sans-serif;
 }
+@media (width<= 768px){
+    .NavContainer{
+        height: 50%;
+    }
+}
